added highscore html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <div id="highscores"></div>
+    <div id="highscores">
+        <a href="highscores.html"><h2>View Highscores</h2></a>
+    </div>
     <div id="questionBox"></div>
     <div id="timer"></div>
 
