started drafting pseudocode

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a href="highscores.html"><h2>View Highscores</h2></a>
     </div>
     <div id="questionBox"></div>
-    <div id="timer"></div>
+    <div id="timer"><h2>Timer</h2></div>
 
 <script src="script.js"></script>
 </body>
