--- a/highscores.html
+++ b/highscores.html
@@ -18,6 +18,7 @@
 
     </div>
     <a href="index.html"><h1>Back</h1></a>
+    <h1>Clear highscores</h1>
 
     <style>
 
@@ -29,7 +30,7 @@
 
         div {
             width: 500px;
-            height: 800px;
+            height: 600px;
             border: solid;
             border-color: purple;
             display: flex ;
