--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
             <h2>Start Quiz</h2>
         </div>
 
-        <div id="timer">
+        <div class="timer">
             <h2>Timer</h2>
+            <h3 id="timer"></h3>
         </div>
 
     </nav>
@@ -37,6 +38,7 @@
             <span>Option2</span>
             <span>Option3</span>
             <span>Option4</span>
+            <p><hr>Correct!/Incorrect.</p>
 
         </div>
 
@@ -44,8 +46,11 @@
     
     <section>
         <form>
-            <h3>Initals Please</h3>
-
+            <h1>All Done!</h1>
+            <h2>Your final score is: <span id="finalScore"></span></h2>
+            <h3>Enter Initals:</h3>
+            <input type="text">
+            <input type="submit">
         </form>
     </section>
 
