connected start button to timer

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
             <a href="highscores.html"><h2>View Highscores</h2></a>
         </div>
 
-        <div id="startQuiz">
-            <h2>Start Quiz</h2>
+        <div class="startQuiz">
+            <button type="button" id="startButton"><h2>Start Quiz</h2></button>
+            <!-- <h2 id="startButton">Start Quiz</h2> -->
         </div>
 
         <div class="timer">
