--- a/highscores.html
+++ b/highscores.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Code Quiz|Highscores</title>
+    <link rel="stylesheet" type="text/css" href="style2.css">
 </head>
 <body>
     
-    <div>
+    <div id="highscores">
         <h2>Highscores</h2>
 
         <table id="highscoreTable">
@@ -20,25 +21,6 @@
     <a href="index.html"><h1>Back</h1></a>
     <h1>Clear highscores</h1>
 
-    <style>
-
-        body {
-            display: flex ;
-            flex-direction: column ;
-            align-items: center ;
-        }
-
-        div {
-            width: 500px;
-            height: 600px;
-            border: solid;
-            border-color: purple;
-            display: flex ;
-            justify-content: center ;
-            margin-top: 50px ;
-        }
-
-    </style>
-
+<script src="script2.js"></script>
 </body>
 </html>
