added clear highscore button functionality

--- a/highscores.html
+++ b/highscores.html
@@ -19,7 +19,7 @@
 
     </div>
     <a href="index.html"><h1>Back</h1></a>
-    <h1>Clear highscores</h1>
+    <button id="clear"><h1>Clear highscores</h1></button>
 
 <script src="script2.js"></script>
 </body>
