changed question dictionary to a list of dictionaries

--- a/index.html
+++ b/index.html
@@ -30,17 +30,15 @@
   
     <section>
 
-        <div id="questionBox">
+        <div id="quizBox">
             <h2>Question <span id="questionNumber"></span> of 5</h2>
-            <div id="question">
-                <p>lorem ipsum dolor sit amet</p>
+            <div id="questionBox"></div>
+            <div id="optionBox">
+                <h4>Option1</h4>
+                <h4>Option2</h4>
+                <h4>Option3</h4>
+                <h4>Option4</h4>
             </div>
-
-            <span>Option1</span>
-            <span>Option2</span>
-            <span>Option3</span>
-            <span>Option4</span>
-           
         </div>
 
     </section>
