--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
 
         <div class="timer">
-            <h2>Timer</h2>
+            <h2>Timer:</h2>
             <h3 id="timer"></h3>
         </div>
 
@@ -57,7 +57,7 @@
     <section>
         <div class="form">
                 <h1>All Done!</h1>
-                <h2>Your final score is: <span id="finalScore"></span></h2>
+                <h2>Your final score is: <span id="finalScore">__</span> seconds!</h2>
                 <h3>Enter Initals:</h3>
                 <input type="text" id="userInitials" placeholder="ex. J.Smith">
                 <button type="button" id="getInitials">Submit</button>
