--- a/highscores.html
+++ b/highscores.html
@@ -13,6 +13,8 @@
         <h2>Highscores</h2>
 
         <table id="highscoreTable">
+            <th>User:</th>
+            <th>Score:</th>
 
         </table>
 
