--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         </div>
 
         <div class="startQuiz">
+            <h1>Welcome to the code quiz!</h1>
+            <p>Here are the rules!</p>
             <button type="button" id="startButton"><h2>Start Quiz</h2></button>
             <!-- <h2 id="startButton">Start Quiz</h2> -->
         </div>
@@ -26,8 +28,6 @@
 
     </nav>
     
-
-  
     <section>
 
         <div id="quizBox">
