linked event listener to queston box answer options

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
             <h2>Question <span id="questionNumber"></span> of 5</h2>
             <div id="questionBox"></div>
             <div id="optionBox">
-                <h4>a) <span id="op1"></span></h4>
-                <h4>b) <span id="op2"></span></h4>
-                <h4>c) <span id="op3"></span></h4>
-                <h4>d) <span id="op4"></span></h4>
+                <h4>a) <span class="option" id="op1"></span></h4>
+                <h4>b) <span class="option" id="op2"></span></h4>
+                <h4>c) <span class="option" id="op3"></span></h4>
+                <h4>d) <span class="option" id="op4"></span></h4>
             </div>
         </div>
 
