connected correct/incorrect message

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 
     <section>
 
-        <div class="correct">
-        <hr>
-        <h3>Correct!/Incorrect.</h3>
+        <div id="correct">
+        <!-- <hr>
+        <h3>Correct!/Incorrect.</h3> -->
         </div>  
     
     </section>
