fixed issue with click event on options and added wait time to display correct/incorrect

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                 <h3 id="question"></h3>
             </div>
             <div id="optionBox">
-                <h4>a) <span class="option" id="op1"></span></h4>
-                <h4>b) <span class="option" id="op2"></span></h4>
-                <h4>c) <span class="option" id="op3"></span></h4>
-                <h4>d) <span class="option" id="op4"></span></h4>
+                <h4><span class="option" id="op1"></span></h4>
+                <h4><span class="option" id="op2"></span></h4>
+                <h4><span class="option" id="op3"></span></h4>
+                <h4><span class="option" id="op4"></span></h4>
             </div>
         </div>
 
