switched method of populating correct box

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 
     <section>
 
-        <div id="correct">
-        <!-- <hr>
-        <h3>Correct!/Incorrect.</h3> -->
+        <div id="correctBox">
+        <hr>
+        <h3 id="correctOrNot"></h3>
         </div>  
     
     </section>
