--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <section>
 
-        <div id="correctBox">
+        <div id="correctBox" class="hide">
         <hr>
         <h3 id="correctOrNot"></h3>
         </div>  
