adjusted when hide class is added and removed for relavent elements

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 
     <section>
-        <div class="form">
+        <div class="form hide">
                 <h1>All Done!</h1>
                 <h2>Your final score is: <span id="finalScore">__</span> seconds!</h2>
                 <h3>Enter Initals:</h3>
