timer now stops when quiz is over

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <section>
         <div class="form hide">
                 <h1>All Done!</h1>
-                <h2>Your final score is: <span id="finalScore">__</span> seconds!</h2>
+                <h2>Your final score is: <span id="finalScore"></span> seconds!</h2>
                 <h3>Enter Initals:</h3>
                 <input type="text" id="userInitials" placeholder="ex. J.Smith">
                 <button type="button" id="getInitials">Submit</button>
