--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <div class="startQuiz" id="startQuiz">
             <h1>Welcome to the code quiz!</h1>
-            <p>Here are the rules!</p>
+            <p>You will have 60 seconds to complete the quiz. Your final score is the time remaining at the moment of completion. For each wrong answer, 5 seconds will be deducted from your final score.</p>
             <button type="button" id="startButton"><h2>Start Quiz</h2></button>
             <!-- <h2 id="startButton">Start Quiz</h2> -->
         </div>
