changed css colors

--- a/index.html
+++ b/index.html
@@ -14,20 +14,23 @@
             <a href="highscores.html"><h2>View Highscores</h2></a>
         </div>
 
-        <div class="startQuiz" id="startQuiz">
-            <h1>Welcome to the code quiz!</h1>
-            <p>You will have 60 seconds to complete the quiz. Your final score is the time remaining at the moment of completion. For each wrong answer, 5 seconds will be deducted from your final score.</p>
-            <button type="button" id="startButton"><h2>Start Quiz</h2></button>
-            <!-- <h2 id="startButton">Start Quiz</h2> -->
-        </div>
-
         <div class="timer">
-            <h2>Timer:</h2>
-            <h3 id="timer"></h3>
+            <h2>Timer:  <span id="timer"></span></h2>
+            <!-- <h3 id="timer"></h3> -->
         </div>
 
     </nav>
     
+    <section>
+        <div class="startQuiz" id="startQuiz">
+            <h1>Welcome to the code quiz!</h1>
+            <p>You will have 60 seconds to complete the quiz. <br>Your final score is the time remaining at the moment of completion. <br> For each wrong answer, 5 seconds will be deducted from your final score.</p>
+            <button type="button" id="startButton"><h2>Start Quiz</h2></button>
+            <!-- <h2 id="startButton">Start Quiz</h2> -->
+        </div>
+    </section>
+
+
     <section id="quizSection" class="hide">
 
         <div id="quizBox">
