--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Code Quiz</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="/develop/style.css">
 </head>
 <body>
 
@@ -71,6 +71,6 @@
 
     
 
-<script src="script.js"></script>
+<script src="/develop/script.js"></script>
 </body>
 </html>
