--- a/highscores.html
+++ b/highscores.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Code Quiz|Highscores</title>
-    <link rel="stylesheet" type="text/css" href="/develop/style2.css">
+    <link rel="stylesheet" type="text/css" href="develop/style2.css">
 </head>
 <body>
     
@@ -23,6 +23,6 @@
     <a href="index.html"><h1>Back</h1></a>
     <button id="clear"><h1>Clear highscores</h1></button>
 
-<script src="/develop/script2.js"></script>
+<script src="develop/script2.js"></script>
 </body>
 </html>
